Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7635

lhsm_posix does not report progress correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.7.0, Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      lhsm_posix always reports the total amount of data transferred when reporting to llapi_hsm_action_progress(3), not the incremental extent transferred as required in the API.

            utopiabound Nathaniel Clark
            utopiabound Nathaniel Clark
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: